<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:foregroundTint="#F1EEEE">

    <!-- Leaderboard List -->
    <RelativeLayout
        android:id="@+id/leaderBoardTop"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#12AFA6">


        <ImageView
            android:id="@+id/circleImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/leaderBoardTitle"
            android:background="@drawable/circular_shape"
            android:src="@drawable/ic_white_star" />

        <TextView
            android:id="@+id/leaderBoardTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="Leaderboard"
            android:textAlignment="center"
            android:textColor="#FFFFFF"

            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/playerRankTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/circleImageView"
            android:layout_marginStart="90dp"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
             />

        <!-- Player Score TextView -->
        <TextView
            android:id="@+id/playerScoreTextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/circleImageView"
            android:layout_marginEnd="90dp"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
          />

        <!-- Player Score TextView -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerRankTextViewTitle"
            android:gravity="center">
            <TextView
                android:id="@+id/playerRankTextView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:text=""
                android:layout_marginRight="150dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playerScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/playerRankTextView"
                android:text=""
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/scoresTabLayout"
        android:layout_width="match_parent"
        android:layout_below="@+id/leaderBoardTop"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabTextColor="@color/light_gray"
        app:tabSelectedTextColor="@android:color/white"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:text="All-time"  android:layout_height="wrap_content" android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:text="Monthly" android:layout_height="wrap_content" android:layout_width="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:text="Weekly" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/leaderboardViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scoresTabLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoresTabLayout"
        android:background="@color/greyWithTransparency"
        android:fadingEdge="horizontal|vertical|none"
        android:orientation="horizontal"
        android:padding="8dp"
        android:id="@+id/leaderboardListHeader">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="left"
            android:text="Rank"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="Name"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="Score"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/leaderboardListView"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:layout_below="@id/leaderboardListHeader"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="2dp"></ListView>

</RelativeLayout>

<com.google.android.material.navigation.NavigationView
android:id="@+id/nav_view"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="start"
app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>