<resources>
    <string name="app_name">Android Volley</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="enter_score">Enter Score...</string>
</resources>
