<?xml version="1.0" encoding="utf-8"?>
<!-- The root view must be the DrawerLayout -->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:background="@drawable/lobby_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <Button
            android:id="@+id/singlePlayer"
            style="@style/SinglePlayerButtonStyle"
            android:layout_width="273dp"
            android:layout_height="53dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="238dp"
            android:text="SinglePlayer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/multiPlayer"
            style="@style/MultiPlayerButtonStyle"
            android:layout_width="273dp"
            android:layout_height="53dp"
            android:layout_marginBottom="94dp"
            android:text="Multiplayer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="80dp"
            android:layout_marginTop="212dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/singlePlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_singleplayer" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/multiPlayer"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/singlePlayer"
            app:srcCompat="@drawable/ic_multiplayer" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="95dp"
            android:layout_height="0dp"
            android:layout_marginTop="71dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/btnStudy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_name" />

        <Button
            android:id="@+id/btnStudy"
            style="@style/AlternateButtonStyle"
            android:layout_width="273dp"
            android:layout_height="53dp"
            android:layout_marginStart="61dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="102dp"
            android:text="Study"
            app:layout_constraintBottom_toTopOf="@+id/singlePlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- This is the navigation view which draws and shows the navigation drawer. Include the menu created in the menu folder. -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>