...
            android:layout_height="wrap_content"
            android:text="Col 3"
            app:layout_column="3"
            app:layout_row="0" />

        <EditText
            android:id="@+id/r1c1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_column="1"
            app:layout_row="1"
            android:background="@drawable/edit_text_native" />
...

    </androidx.gridlayout.widget.GridLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:text="End Game"
        android:id="@+id/endGameButton"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>


...
